vemo-app/main/default/objects/SchoolProgramsOfStudy__c/SchoolProgramsOfStudy__c.object-meta.xml
<CustomObject>
    <label>School Program of Study</label>
    <nameField>
        <label>School Programs of Study Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>School Programs of Study</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>