vemo-app/main/default/objects/SchoolProgramsOfStudy__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <formula>if ( ISBLANK( Name ),  ProgramOfStudy__r.Description__c,  Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>