vemo-app/main/default/objects/SchoolProgramsOfStudy__c/fields/ProgramOfStudy__c.field-meta.xml
<CustomField>
    <fullName>ProgramOfStudy__c</fullName>
    <label>Program Of Study</label>
    <referenceTo>ProgramOfStudy__c</referenceTo>
    <relationshipLabel>School Programs of Study</relationshipLabel>
    <relationshipName>SchoolProgramsOfStudy</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>