vemo-app/main/default/objects/SchoolProgramsOfStudy__c/fields/RecordLabel__c.field-meta.xml
<CustomField>
    <fullName>RecordLabel__c</fullName>
    <formula>School__r.Name +":" + Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Label</label>
    <type>Text</type>
</CustomField>