vemo-app/main/default/objects/SchoolProgramsOfStudy__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <label>School</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>School_Programs_of_Study</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>