vemo-app/main/default/objects/SchoolProgramsOfStudy__c/fields/SchoolDescription__c.field-meta.xml
<CustomField>
    <fullName>SchoolDescription__c</fullName>
    <label>DEPRECATESchool Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>